Updating user registration

--- a/core.entity_form_display.user.user.default.yml
+++ b/core.entity_form_display.user.user.default.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - field.field.user.user.field_user_first_name
     - field.field.user.user.field_user_last_name
+    - field.field.user.user.field_user_phone
   module:
+    - phone_number
     - user
 _core:
   default_config_hash: FaQ9Ptcpxpg30AtiqRDtl_8zbJArHP1LPfug_s59TOA
@@ -15,14 +17,13 @@ bundle: user
 mode: default
 content:
   account:
-    weight: -10
+    weight: 0
     region: content
-  contact:
-    weight: 5
-    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_user_first_name:
     type: string_textfield
-    weight: 7
+    weight: 3
     region: content
     settings:
       size: 60
@@ -30,16 +31,29 @@ content:
     third_party_settings: {  }
   field_user_last_name:
     type: string_textfield
-    weight: 8
+    weight: 4
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_user_phone:
+    type: phone_number_default
+    weight: 5
+    region: content
+    settings:
+      default_country: CA
+      placeholder: 'Phone number'
+    third_party_settings: {  }
   language:
-    weight: 0
+    weight: 1
     region: content
+    settings: {  }
+    third_party_settings: {  }
   timezone:
-    weight: 6
+    weight: 2
     region: content
-hidden: {  }
+    settings: {  }
+    third_party_settings: {  }
+hidden:
+  contact: true
