--- a/core.entity_view_display.user.user.default.yml
+++ b/core.entity_view_display.user.user.default.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - field.field.user.user.field_user_first_name
     - field.field.user.user.field_user_last_name
+    - field.field.user.user.field_user_phone
   module:
+    - phone_number
     - user
 _core:
   default_config_hash: mZLyuWM9CQx2ZJVqFGSbzgFnHzudVbHBYmdU256A5Wk
@@ -30,7 +32,17 @@ content:
     third_party_settings: {  }
     weight: 7
     region: content
+  field_user_phone:
+    type: phone_number_country
+    label: above
+    settings:
+      type: name
+    third_party_settings: {  }
+    weight: 8
+    region: content
   member_for:
+    settings: {  }
+    third_party_settings: {  }
     weight: 5
     region: content
 hidden: {  }
