--- a/core.extension.yml
+++ b/core.extension.yml
@@ -16,6 +16,7 @@ module:
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  email_registration: 0
   entity_reference_revisions: 0
   field: 0
   field_group: 0
@@ -34,6 +35,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  phone_number: 0
   players_reserve: 0
   rdf: 0
   search: 0
