--- a/user.role.owner.yml
+++ b/user.role.owner.yml
@@ -1,4 +1,4 @@
-uuid: 8c027ec9-a858-4e75-a8e3-8779867131da
+uuid: 09bf934a-0e0e-43b1-9325-c168706d3c86
 langcode: en
 status: true
 dependencies:
@@ -6,9 +6,9 @@ dependencies:
     - filter.format.full_html
   module:
     - filter
-id: floor
-label: Floor
-weight: 4
+id: owner
+label: owner
+weight: 5
 is_admin: null
 permissions:
   - 'use text format full_html'
