--- a/core.extension.yml
+++ b/core.extension.yml
@@ -8,6 +8,10 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor: 0
+  ckeditor_font: 0
+  color_picker: 0
+  colorapi: 0
+  colorbutton: 0
   comment: 0
   config: 0
   contact: 0
@@ -27,21 +31,28 @@ module:
   history: 0
   image: 0
   layout_builder: 0
+  layout_builder_browser: 0
+  layout_builder_modal: 0
+  layout_builder_restrictions: 0
   layout_builder_styles: 0
   layout_discovery: 0
   link: 0
+  media: 0
+  media_library: 0
   menu_link_content: 0
   menu_ui: 0
   mysql: 0
   node: 0
   options: 0
   page_cache: 0
+  panelbutton: 0
   path: 0
   path_alias: 0
   phone_number: 0
   players_cfg: 0
   players_reserve: 0
   rdf: 0
+  responsive_image: 0
   responsive_menus: 0
   search: 0
   shortcut: 0
@@ -52,6 +63,7 @@ module:
   tour: 0
   twig_tweak: 0
   user: 0
+  vendor_stream_wrapper: 0
   views_ui: 0
   views: 10
   paragraphs: 11
