--- a/core.entity_view_display.node.pi_ct_games.default.yml
+++ b/core.entity_view_display.node.pi_ct_games.default.yml
@@ -17,16 +17,16 @@ mode: default
 content:
   field_game_date:
     type: datetime_default
-    label: above
+    label: hidden
     settings:
       timezone_override: ''
-      format_type: medium
+      format_type: date_only
     third_party_settings: {  }
     weight: 101
     region: content
   field_game_types:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
