--- a/core.extension.yml
+++ b/core.extension.yml
@@ -2,16 +2,14 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   admin_toolbar: 0
+  auto_entitylabel: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
   block_content: 0
   breakpoint: 0
   ckeditor: 0
-  ckeditor_font: 0
   color_picker: 0
-  colorapi: 0
-  colorbutton: 0
   comment: 0
   config: 0
   contact: 0
@@ -21,6 +19,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   email_registration: 0
+  entity_clone: 0
   entity_reference_revisions: 0
   field: 0
   field_group: 0
@@ -39,13 +38,13 @@ module:
   link: 0
   media: 0
   media_library: 0
+  media_library_form_element: 0
   menu_link_content: 0
   menu_ui: 0
   mysql: 0
   node: 0
   options: 0
   page_cache: 0
-  panelbutton: 0
   path: 0
   path_alias: 0
   phone_number: 0
@@ -59,12 +58,15 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
+  twig_field_value: 0
   twig_tweak: 0
   user: 0
   vendor_stream_wrapper: 0
   views_ui: 0
+  pathauto: 1
   views: 10
   paragraphs: 11
   standard: 1000
