--- a/editor.editor.full_html.yml
+++ b/editor.editor.full_html.yml
@@ -25,10 +25,6 @@ settings:
             - '-'
             - RemoveFormat
             - '-'
-            - TextColor
-            - BGColor
-            - Font
-            - FontSize
         -
           name: Linking
           items:
@@ -55,12 +51,7 @@ settings:
           items:
             - ShowBlocks
             - Source
-  plugins:
-    font:
-      font_names: ''
-      font_sizes: ''
-    colorbutton:
-      colors: '000000,FFFFFF'
+  plugins: {  }
 image_upload:
   status: true
   scheme: public
