--- a/layout_builder_browser.layout_builder_browser_block.image.yml
+++ b/layout_builder_browser.layout_builder_browser_block.image.yml
@@ -6,6 +6,6 @@ id: image
 block_id: 'inline_block:cbl_image'
 category: lbb_cat_content
 label: Image
-image_path: ''
-image_alt: ''
-weight: -100
+image_path: /themes/custom/players_theme/images/icons/image.svg
+image_alt: Image
+weight: 1
