Adding admin menu

--- a/core.menu.static_menu_link_overrides.yml
+++ b/core.menu.static_menu_link_overrides.yml
@@ -7,3 +7,51 @@ definitions:
     weight: 0
     expanded: false
     enabled: true
+  system__admin_content:
+    weight: -71
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  system__admin_structure:
+    weight: -70
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  system__themes_page:
+    weight: -69
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  system__modules_list:
+    weight: -68
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  system__admin_config:
+    weight: -67
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  entity__user__collection:
+    weight: -66
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  system__admin_reports:
+    weight: -65
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  help__main:
+    weight: -64
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
