Adding ultimate cron

--- a/core.extension.yml
+++ b/core.extension.yml
@@ -68,6 +68,7 @@ module:
   tour: 0
   twig_field_value: 0
   twig_tweak: 0
+  ultimate_cron: 0
   user: 0
   vendor_stream_wrapper: 0
   views_ui: 0
