--- a/core.extension.yml
+++ b/core.extension.yml
@@ -4,6 +4,7 @@ module:
   admin_toolbar: 0
   auto_entitylabel: 0
   automated_cron: 0
+  better_exposed_filters: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -32,6 +33,10 @@ module:
   help: 0
   history: 0
   image: 0
+  jquery_ui: 0
+  jquery_ui_datepicker: 0
+  jquery_ui_slider: 0
+  jquery_ui_touch_punch: 0
   layout_builder: 0
   layout_builder_browser: 0
   layout_builder_modal: 0
