--- a/system.site.yml
+++ b/system.site.yml
@@ -3,12 +3,12 @@ _core:
 langcode: en
 uuid: 16cdb629-2f4e-49fa-9360-f4b05cda97b3
 name: 'Player''s Inc.'
-mail: virginia@playersinc.ca
+mail: bill@playersinc.ca
 slogan: ''
 page:
   403: ''
   404: ''
-  front: /home
+  front: /node/87
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
