--- a/core.menu.static_menu_link_overrides.yml
+++ b/core.menu.static_menu_link_overrides.yml
@@ -8,48 +8,54 @@ definitions:
     expanded: false
     enabled: true
   system__admin_content:
-    weight: -79
+    weight: -81
     menu_name: admin
     parent: system.admin
-    expanded: false
     enabled: true
+    expanded: false
   system__admin_structure:
-    weight: -78
+    weight: -80
     menu_name: admin
     parent: system.admin
     expanded: false
     enabled: true
   system__themes_page:
-    weight: -77
+    weight: -79
     menu_name: admin
     parent: system.admin
     expanded: false
     enabled: true
   system__modules_list:
-    weight: -76
+    weight: -78
     menu_name: admin
     parent: system.admin
     expanded: false
     enabled: true
   system__admin_config:
-    weight: -75
+    weight: -77
     menu_name: admin
     parent: system.admin
     expanded: false
     enabled: true
   entity__user__collection:
-    weight: -74
+    weight: -76
     menu_name: admin
     parent: system.admin
     expanded: false
     enabled: true
   system__admin_reports:
-    weight: -73
+    weight: -75
     menu_name: admin
     parent: system.admin
     expanded: false
     enabled: true
   help__main:
+    weight: -74
+    menu_name: admin
+    parent: system.admin
+    expanded: false
+    enabled: true
+  direct_clear_cache__admin:
     weight: -72
     menu_name: admin
     parent: system.admin
