--- a/core.entity_view_display.node.pi_ct_games.default.yml
+++ b/core.entity_view_display.node.pi_ct_games.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.pi_ct_games.field_pi_dealers
     - field.field.node.pi_ct_games.field_pi_floor
     - field.field.node.pi_ct_games.field_pi_food
+    - field.field.node.pi_ct_games.field_pi_game_info
     - node.type.pi_ct_games
   module:
     - datetime
@@ -59,6 +60,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 105
+    region: content
+  field_pi_game_info:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 106
     region: content
   links:
     settings: {  }
