--- a/views.view.pi_view_users_by_name.yml
+++ b/views.view.pi_view_users_by_name.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - field.storage.user.field_user_first_name
     - field.storage.user.field_user_last_name
+    - user.role.administrator
+    - user.role.floor
+    - user.role.owner
   module:
     - user
 id: pi_view_users_by_name
@@ -177,9 +180,12 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       access:
-        type: perm
+        type: role
         options:
-          perm: 'access user profiles'
+          role:
+            administrator: administrator
+            floor: floor
+            owner: owner
       cache:
         type: tag
         options: {  }
@@ -232,7 +238,7 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
-        - user.permissions
+        - user.roles
       tags:
         - 'config:field.storage.user.field_user_first_name'
         - 'config:field.storage.user.field_user_last_name'
@@ -261,7 +267,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - user.permissions
+        - user.roles
       tags:
         - 'config:field.storage.user.field_user_first_name'
         - 'config:field.storage.user.field_user_last_name'
