--- a/system.site.yml
+++ b/system.site.yml
@@ -12,4 +12,4 @@ page:
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
-mail_notification: virginia@playersinc.ca
+mail_notification: bill@playersinc.ca
